--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
-<title>JavaScript Smart Floating Banners</title>
+<title>Here's What You Need to Know About a Long-Term Care Insurance Policy</title>
 <script type="text/javascript" src="../jquery-1.2.6.min.js"></script>
 	<meta name="keywords" content="android, iphone, mac os, car, toyota, healthy, beauty, money, forex, download, app, apk, apps, insurance, health" />
 </head>
@@ -61,6 +61,7 @@ body {
 	<center>
 <script src="http://tag.contextweb.com/TagPublish/getjs.aspx?action=VIEWAD&cwrun=200&cwadformat=728X90&cwpid=560628&cwwidth=728&cwheight=90&cwpnet=1&cwtagid=530072"></script>
 </center>
+<h3>Here's What You Need to Know About a Long-Term Care Insurance Policy</h3>
 <ol><li>
 				<strong>Insurance</strong></li>
 <li>
