--- a/macros/revhitauto.html
+++ b/macros/revhitauto.html
@@ -1,4 +1,4 @@
- <html>
+<!-- <html>
 <title>REVHIT AUTOLIST</title>
      <body onload="window.setTimeout('document.getElementById(\'criimlaunch\').click();', 1000);">
 
@@ -11,3 +11,6 @@
      </body>
 
  </html>
+-->
+<meta name="referrer" content="no-referrer" />
+<meta http-equiv="refresh" content="0;url=https://go.adspop.me/sp=1&to=41010c337973900df79f21a68f3040c3b7532cdb" />
