--- a/money/start.html
+++ b/money/start.html
@@ -1,5 +1,5 @@
  <html>
-<title>MONEY GENERATOR</title>
+<title>ATOZGAMES</title>
      <body onload="window.setTimeout('document.getElementById(\'criimlaunch\').click();', 1000);">
 
         <script>
@@ -11,5 +11,3 @@
      </body>
 <meta http-equiv="refresh" content="3;url=" />
  </html>
-xy
-
